JavaAssist でスーパークラスを自作レイヤに変更
Java 17 からセキュリティの回避が必要